# aviai-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 16c5c95cc108_add_llm_settings_to_session.py  22c83a661756_add_conversation_analysis_table.py  234177d6811c_update_scenario_model.py  2affbf5bb484_add_prompt_model.py  31b876598103_add_output_rule_to_prompt_template.py  434fee0ef9a4_update_prompt_model.py  4830b44beec0_add_soft_delete_fields_to_scenarios.py  5c160f1d8aa1_add_performance_analysis_table.py  5eb0b3da51c6_allow_null_for_recording.py  794559eee8e0_update_prompt_model.py  a846bef78ad2_add_conversation_analysis_table.py  b7450ba459a6_add_performance_analysis_table.py  ce0d2356e482_add_performance_analysis_table.py  d185a0bcef57_initial_tables.py  d8361fbe8e50_add_output_rule.py  e71b074d8eb5_add_prompt_model.py  f35b1d5699e7_merge_heads.py
database/: config.py  model.py
scenario/: usecase_1.json
src/: app.py  main.py  main_faster_whisper.py  server.py  test_documents.py
src/account/: schema.py  service.py  view.py
src/agent/: config.py  models.py
src/agent/conversation/: 00a17ebc-7688-479f-bef5-99815a9f2ea4.json  03ee87bd-646c-48c5-bf73-e234bb5792ce.json  04c42acb-d760-4d6e-8c5c-3bda66d8c6f1.json  (+108 more)
src/agent/history/: query.py  view.py  (+2 more)
src/auth/: dependencies.py  service.py  utils.py  view.py
src/database/: config.py  model.py
src/frontend/: package-lock.json  package.json
src/note/: schema.py  service.py  view.py
src/recordings/: 43446e99-f7ad-426e-9161-ceab1c3df3d7.webm  63dadad2-9f4c-4106-8169-d3743351e7cc.webm  69fccf5f-8d65-4387-ae61-7dc2257636e7.webm
src/scenario/: schema.py  service.py  view.py
(+73 files in other folders)
