[project]
name = "local-llm-aviai"
version = "0.1.0"
description = "Local LLM + STT + TTS pipeline for AviAI"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core LLM / agent
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",

    # Speech-to-text
    "openai-whisper>=20240930",
    "sounddevice>=0.5.2",
    "torchaudio>=2.6.0",

    # Text-to-speech
    "chatterbox-tts>=0.1.1",
    "kokoro>=0.9.4",

    # NLP / utils
    "nltk>=3.9.1",
    "rich>=14.0.0",
    "peft>=0.15.2",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]