[project]
name = "aviai-backend"
version = "0.1.0"
description = "Local LLM + STT + TTS pipeline for AviAI"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core LLM / agent
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    # Speech-to-text
    "openai-whisper>=20240930",
    "faster-whisper>=1.0.0",
    "sounddevice>=0.5.2",
    "torchaudio>=2.6.0",
    # Text-to-speech
    "chatterbox-tts>=0.1.1",
    "kokoro>=0.9.4",
    "pocket-tts>=0.1.0",
    # Web / API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "python-dotenv>=1.0.0",
    # Auth
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    # NLP / utils
    "nltk>=3.9.1",
    "rich>=14.0.0",
    "peft>=0.15.2",
    "setuptools>=80.9.0",
    "mlx==0.30.3",
    "airllm==2.11.0",
    # Pin NumPy for Numba compatibility
    "numpy<2.3",
    # Database
    "alembic>=1.18.1",
    "pytz>=2025.2",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
